[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Game/menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/Objects/event_zone.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Levels/level_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://medias/gfx/static/square.png" type="Texture" id=4]
[ext_resource path="res://assets/OpenSans-Light.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/OpenSans-Semibold.tres" type="DynamicFont" id=6]
[ext_resource path="res://scenes/Backgrounds/background3.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "hide_menu"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 640, 360 ), Vector2( 640, -360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Sprite:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ 0.6, 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 640, -360 ), Vector2( 640, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Sprite:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ 0.0, 0.6 ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="event_zone" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 640 )

[node name="event_zone1" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -128 )

[node name="level_menu" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -1 )

[node name="show_menu" type="AnimationPlayer" parent="."]
anims/hide_menu = SubResource( 1 )
anims/show_menu = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 0.6 )
scale = Vector2( 1280, 720 )
texture = ExtResource( 4 )
centered = false

[node name="Control" type="Control" parent="CanvasLayer"]
margin_left = 640.0
margin_top = 360.0
margin_right = 680.0
margin_bottom = 400.0

[node name="Label" type="Label" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -160.0
margin_right = 1010.0
margin_bottom = 200.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "Future Main Menu"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
margin_left = -100.0
margin_top = 20.0
margin_right = -60.0
margin_bottom = 60.0
mouse_filter = 0

[node name="music" type="CheckBox" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 210.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 6 )
disabled = true
text = "Enable music"

[node name="sound" type="CheckBox" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 51.0
margin_right = 210.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 6 )
disabled = true
text = "Enable sound"

[node name="Background 2" parent="." instance=ExtResource( 7 )]
[connection signal="timeout" from="Timer" to="." method="init"]
[connection signal="body_entered" from="event_zone1" to="." method="before_start"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/music" to="." method="set_music"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/sound" to="." method="set_sound"]
